@@ -1,0 +1,33 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.013.
+.TH MBCHK "1" "October 1999" "GNU GRUB 0.5.94" FSF
+.SH NAME
+mbchk \- Multiboot format checker
+.SH SYNOPSIS
+.B mbchk
+[\fIOPTION\fR]... [\fIFILE\fR]...
+.SH DESCRIPTION
+.PP
+Check if the format of FILE complies with the Multiboot Specification.
+.TP
+\fB\-q\fR, \fB\-\-quiet\fR
+suppress all normal output
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+display this help and exit
+.TP
+\fB\-v\fR, \fB\-\-version\fR
+output version information and exit.
+.SH "REPORTING BUGS"
+Report bugs to <bug-grub@gnu.org>.
+.SH "SEE ALSO"
+The full documentation for
+.B mbchk
+is maintained as a Texinfo manual.  If the
+.B info
+and
+.B mbchk
+programs are properly installed at your site, the command
+.IP
+.B info mbchk
+.PP
+should give you access to the complete manual.
